add fetch content loader

--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <h1 data-controller="example"></h1>
+
+  <h2>fetch api</h2>
+  <div data-controller="content-loader" data-content-loader-url-value="api/httpexample"></div>
 </body>
 </html>
